Adding preview image, fix population merge

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "author": "gnarf",
+    "author": "gnarf,ontoclasm",
     "title": "Issachar Evolved",
     "description":"Adds three new Issachari to vary up the encounters with the desert nomad clan.",
     "version":"1.0.0",
