--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "author": "gnarf,ontoclasm",
-    "title": "Issachar Evolved",
-    "description":"Adds three new Issachari to vary up the encounters with the desert nomad clan.",
+    "author": "gnarf, ontoclasm, ectafoole",
+    "title": "Issachari Evolved",
+    "description":"Add a few new types Issachari to the raiding parties!  The water guardian, elder, and sniper have joined the ranks!\n\nThis mod was created as a part of the 2023 Monster Mash mod jam!  I asked ontoclasm (qud's artist) if he had ideas I should turn into a Monster Mash submission, and was quickly handed these three tiles with the comment: \"always thought they could use a bit more variety, cool desert nomads that hit you with sick burns any time you try to talk to them? yes please!\"  - I agree",
     "version":"1.0.0",
     "tags":"monsters",
     "previewImage":"preview.png"
